<resources>
    <string name="app_name">GoldPet</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_login">Login</string>
    <string name="menu_gallery">Resgates</string>
    <string name="menu_dicas">Dicas</string>
    <string name="menu_forum">Fórum</string>
    <string name="menu_cadastro">Cadastro</string>
    <string name="menu_adocao">Adoção</string>
    <string name="menu_resgate">Resgate</string>

    <string-array name="niveisUrgencia">
        <item>Selecione um nivel de Urgencia</item>
        <item>Não urgente</item>
        <item>Pouco machucado</item>
        <item>Machucado</item>
        <item>Perigo</item>
        <item>Muito Urgente</item>
    </string-array>
</resources>


